<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Main stuff -->
    <string name="app_name">JPSTrack</string>
    
    <string name="accept_eula">I accept the EULA terms.</string>
    <string name="reject_eula">I do not accept the EULA terms.</string>
    
    <string name="last_known_location_">Last known location =</string>
    <string name="preferred_provider_is">Preferred provider is: </string>
    <string name="cannot_get_gps_service">CANNOT GET GPS SERVICE</string>
    <string name="provider_found">Provider found: </string>
    
    <!-- "GPS is off" dialog -->
    <string name="gps_dialog_name">GPS Problem</string>
	<string name="gps_dialog_text">The GPS is powered off. 
	    Please visit the Settings App and enable the \'Use GPS Satellites\' option.</string>
	<string name="gps_dialog_dismiss_label">Ignore</string>
	<string name="gps_dialog_settings_label">Settings…</string>
    
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>
    
    <string name="start_button_label">Start</string>
    <string name="pause_button_label">Pause</string>
    <string name="pause_button_resume_label">Resume</string>
    <string name="done_button_label">Done</string>
    <string name="stop_button_label">Stop</string>
    
    <!-- General Errors -->
    <string name="error">Error</string>
    <string name="cant_start_activity">Unable to start Activity</string>

	<!-- Voicenote -->
    <string name="voicenote_button_label">Voice Note</string>
	<string name="voicenote_name">VoiceNote Recording</string>
	<string name="voicenote_discard_button_label">Discard VoiceNote</string>
	<string name="voicenote_save_button_label">Save VoiceNote</string>

	<!-- textnote -->
    <string name="textnote_button_label">Text Note</string>
	<string name="textnote_frame_label">TextNote Creation</string>
	<string name="textnote_name">TextNote Creation</string>
	<string name="textnote_discard_button_label">Discard Text</string>
	<string name="textnote_save_button_label">Save Text</string>
    
    <!-- Take Picture -->
    <string name="takepicture_button_label">Take Picture</string>
    <string name="picture_saved">Picture saved as</string>
    <string name="picture_created_but_missing">Camera Intent returned OK but image not created!</string>

    <!-- Menu -->
    <string name="settings_label">Settings…</string>
    <string name="settings_name">JPSTrack Settings</string>
    <string name="settings_shortname">Settings</string>
    <string name="settings_accel">s</string>
    <string name="suggest">Suggest Improvement</string>
    <string name="suggest_shortname">Suggestion</string>
    <string name="rerun_intro">Introduction</string>
    <string name="rerun_intro_shortname">Intro</string>
	<string name="privacy_policy">Privacy Policy</string>
	<string name="privacy_shortname">Privacy</string>
    
    <!-- Onboarding -->
    <string name="welcome_name">Welcome to JPSTrack</string>
    <string name="welcome_text">Welcome to JPSTrack!
        You can watch a little video about this app, or see a brief web-page introduction,
        or skip the whole "introduction" thing and go straight into the app. It\'s your choice!
        </string>
     <string name="skip_smarty">Skip, let me figure it out</string>
     <string name="skip_done_that">Skip, I\'ve used this app</string>
     <string name="watch_page">View Web Intro</string>
     <string name="watch_video">Watch Intro Video</string>
     
    <!-- Preferences -->
    <string name="local_storage_title">Local storage</string>
    <string name="dir_summary">Location to save GPX files, images, notations, etc.</string>
    <string name="dir_title">Data Directory</string>
    
    <string name="remote_account_title">OSM Uploading</string>
    <string name="username_summary">Your login name (we don\'t save your password permanently, due to security)</string>
    <string name="username_title">OSM User Name</string>
    
    <string name="osm_alwaysUpload_title">Always upload after save</string>
    <string name="osm_alwaysUpload_summary">If checked, will try to upload each file to OSM after saving it.</string>

    <string name="osm_useSandbox_title">Upload to Sandbox</string>
    <string name="osm_useSandbox_summary">Developers only: upload to OSM "Sandbox" or test server (requires separate login/password!).</string>
    
    <!--  About box -->
    <string name="about_name">About JPSTrack</string>
    <string name="about_shortname">About</string>
    <string name="about_text">JPSTrack, the small simple map maker app. See http://darwinsys.com/jpstrack/</string>
    <string name="about_done_button_label">OK</string>
    
</resources>
