<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/settings"
		android:title="@string/settings_name"
		android:titleCondensed="@string/settings_shortname"
		android:alphabeticShortcut="@string/settings_accel"
		android:icon="@android:drawable/ic_menu_preferences"
		/>
	<item android:id="@+id/rerun_intro"
		android:title="@string/rerun_intro"
		android:titleCondensed="@string/rerun_intro_shortname"
		android:icon="@android:drawable/ic_menu_help"
		/>
	<item android:id="@+id/suggest"
		android:title="@string/suggest"
		android:titleCondensed="@string/suggest_shortname"
		/>
	<item android:id="@+id/about"
		android:title="@string/about_name"
		android:titleCondensed="@string/about_shortname"
		android:icon="@android:drawable/ic_menu_info_details"
		/>
	<item android:id="@+id/privacy"
		android:title="@string/privacy_policy"
		android:titleCondensed="@string/privacy_shortname"
		/>
</menu>
